[gd_scene format=3 uid="uid://c323mdijdhktg"]

[ext_resource type="PackedScene" uid="uid://dsv7s6tfmnsrs" path="res://addons/guide-cpp/plugin/editor/input_display/input_display.tscn" id="1_pg8n3"]
[ext_resource type="Script" uid="uid://cwtooxs5oedi5" path="res://addons/guide-cpp/plugin/editor/input_mapping_editor/input_mapping_editor.gd" id="1_tf382"]
[ext_resource type="PackedScene" uid="uid://ck5a30syo6bpo" path="res://addons/guide-cpp/plugin/editor/modifier_slot/modifier_slot.tscn" id="2_bswi7"]
[ext_resource type="PackedScene" uid="uid://tk30wnstb0ku" path="res://addons/guide-cpp/plugin/editor/trigger_slot/trigger_slot.tscn" id="3_57ow0"]
[ext_resource type="PackedScene" uid="uid://dic27bm4pfw3q" path="res://addons/guide-cpp/plugin/editor/binding_dialog/binding_dialog.tscn" id="4_nvfbc"]
[ext_resource type="PackedScene" uid="uid://cly0ff32fvpb2" path="res://addons/guide-cpp/plugin/editor/array_edit/array_edit.tscn" id="6_jekhk"]

[sub_resource type="DPITexture" id="DPITexture_bswi7"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#ff5d5d\" d=\"M2 1v8.586l1.293-1.293a1 1 0 0 1 1.414 0L7 10.587l2.293-2.293a1 1 0 0 1 1.414 0L13 10.586l1-1V6H9V1H2zm8 0v4h4zm-6 9.414-2 2V15h12v-2.586l-.293.293a1 1 0 0 1-1.414 0L10 10.414l-2.293 2.293a1 1 0 0 1-1.414 0L4 10.414z\"/></svg>
"

[node name="InputMappingEditor" type="MarginContainer" unique_id=1298728465]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
script = ExtResource("1_tf382")
modifier_slot_scene = ExtResource("2_bswi7")
trigger_slot_scene = ExtResource("3_57ow0")
binding_dialog_scene = ExtResource("4_nvfbc")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=435243447]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer" unique_id=1583857141]
layout_mode = 2
size_flags_vertical = 0

[node name="Panel" type="Panel" parent="HBoxContainer/MarginContainer" unique_id=1926453040]
visible = false
layout_mode = 2

[node name="EditInputMappingButton" type="Button" parent="HBoxContainer/MarginContainer" unique_id=708516579]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Open input mapping in inspector"
icon = SubResource("DPITexture_bswi7")
flat = true

[node name="MarginContainer1" type="MarginContainer" parent="HBoxContainer" unique_id=477293371]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="HBoxContainer/MarginContainer1" unique_id=750015065]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer1" unique_id=1370062897]
layout_mode = 2

[node name="InputDisplay" parent="HBoxContainer/MarginContainer1/HBoxContainer" unique_id=501823037 instance=ExtResource("1_pg8n3")]
unique_name_in_owner = true
layout_mode = 2
scroll_active = false

[node name="EditInputButton" type="Button" parent="HBoxContainer/MarginContainer1/HBoxContainer" unique_id=1608682476]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "Edit bound input..."
icon = SubResource("DPITexture_bswi7")
flat = true

[node name="ClearInputButton" type="Button" parent="HBoxContainer/MarginContainer1/HBoxContainer" unique_id=1776874224]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "Delete bound input"
icon = SubResource("DPITexture_bswi7")
flat = true

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer" unique_id=649987965]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Panel" type="Panel" parent="HBoxContainer/MarginContainer2" unique_id=818036230]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2" unique_id=234489748]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 2.0

[node name="Modifiers" parent="HBoxContainer/MarginContainer2/VBoxContainer" unique_id=1778300307 instance=ExtResource("6_jekhk")]
unique_name_in_owner = true
layout_mode = 2
title = "Modifiers"
add_tooltip = "Add modifier..."
clear_tooltip = "Clear modifiers"
collapsed = false

[node name="AddModifierPopup" type="PopupMenu" parent="HBoxContainer/MarginContainer2/VBoxContainer" unique_id=377188047]
unique_name_in_owner = true

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer" unique_id=1729090180]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Panel" type="Panel" parent="HBoxContainer/MarginContainer3" unique_id=368685958]
visible = false
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/MarginContainer3" unique_id=1510086366]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 2.0

[node name="Triggers" parent="HBoxContainer/MarginContainer3/VBoxContainer2" unique_id=940520422 instance=ExtResource("6_jekhk")]
unique_name_in_owner = true
layout_mode = 2
title = "Triggers"
add_tooltip = "Add trigger..."
clear_tooltip = "Clear triggers"
collapsed = false

[node name="AddTriggerPopup" type="PopupMenu" parent="HBoxContainer/MarginContainer3/VBoxContainer2" unique_id=76191160]
unique_name_in_owner = true

[connection signal="pressed" from="HBoxContainer/MarginContainer/EditInputMappingButton" to="." method="_on_edit_input_mapping_button_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer1/HBoxContainer/EditInputButton" to="." method="_on_edit_input_button_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer1/HBoxContainer/ClearInputButton" to="." method="_on_clear_input_button_pressed"]
[connection signal="index_pressed" from="HBoxContainer/MarginContainer2/VBoxContainer/AddModifierPopup" to="." method="_on_add_modifier_popup_index_pressed"]
[connection signal="index_pressed" from="HBoxContainer/MarginContainer3/VBoxContainer2/AddTriggerPopup" to="." method="_on_add_trigger_popup_index_pressed"]
